--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       }
     });
   </script>
+  <script type="text/javascript" async="async" src="https://widgets.outbrain.com/outbrain.js"></script>
 </body>
 
 </html>
