--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <gwd-metric-configuration></gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
       <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="300px" data-gwd-height="250px">
-         <a href='https://digitaltribe.com.ng/?click_id={click_id}'target="_blank"> 
+        <a href='https://sterling.ng/onebank/?utm_source=digital+tribe+programmatic&utm_medium=banner&utm_campaign=digital+campaign/?click_id={click_id}'target="_blank">
          <div class="gwd-page-content gwd-page-size">
           <div class="cube-container">
             <div class="cube">
